--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/icon01.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="JSONを整形する無料ツール。データやテキストの変換可能。ブラウザで動作、インストール不要。"
+    />
     <title>テキスト変換ツール</title>
   </head>
   <body>
